<resources>
    <!-- Botões-->
    <string name="tela_cadastro_usuario">Cadastro</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="lbl_responder">Responder</string>

    <!-- Labels Action Bar-->
    <string name="app_name">Learn IT</string>
    <string name="boas_vindas">Bem vindo!</string>
    <string name="praticar">Praticar</string>
    <string name="estudar">Estudar</string>
    <string name="resultado_final">Resultado final</string>

    <!-- Texto boas vindas-->
    <string name="textoBoasVindas">O Learn IT é um aplicativo que irá fornecer um guia prático e dinâmico para aprender a programar, utilizando como linguagem de programação, o Groovy.
Para quem não sabe, o Groovy é uma linguagem criada para o Java totalmente Orientada a Objetos, semelhante a Ruby e Python, pode-se entender como uma mistura dos mesmos e o mais legal de tudo; ela é interpretada pela JVM assim como Scala e Kotlin!
Com todas essas características, entre várias outras, o Learn IT vai lhe apresentar de uma forma didática e interativa, sendo a maior expectativa, o aprendizado qualificado na escrita de códigos pelo aluno, utilizando Groovy
    </string>

    <!-- Questão 01-->
    <string name="label_questionario">Questionario</string>
    <string name="questao01">Em Groovy, qual caracter utilizar para paramêtros em uma closures? </string>
    <string name="alternativa01_01">-></string>
    <string name="alternativa01_02">=></string>
    <string name="alternativa01_03">==></string>
    <string name="alternativa01_04">(</string>

    <!-- Questão 02-->
    <string name="questao02">Em uma classe Groovy, é possível utilizar código Java?</string>
    <string name="alternativa02_01">Sim, é possível</string>
    <string name="alternativa02_02">Não, não é possível</string>
    <string name="alternativa02_03">Somente se a extensão for .java</string>
    <string name="alternativa02_04">Nenhuma das alternativas</string>

    <!-- Questão 03-->
    <string name="questao03">Em Groovy, qual operador utilizamos para declarar uma variável com inferência de tipo?</string>
    <string name="alternativa03_01">def</string>
    <string name="alternativa03_02">val</string>
    <string name="alternativa03_03">var</string>
    <string name="alternativa03_04">variable</string>

    <!-- Questão 04-->
    <string name="questao04">Em Groovy, o que são Closures?</string>
    <string name="alternativa04_01">Um bloco de código reutilizável delimitado por chaves</string>
    <string name="alternativa04_02">Um bloco de código não reutilizável delimitado por parenteses</string>
    <string name="alternativa04_03">Um bloco de código onde seu retorno sempre será null</string>
    <string name="alternativa04_04">Um bloco de código reutilizável iniciado com $</string>

    <!-- Questão 05-->
    <string name="questao05">Qual o nome do operador: ?.</string>
    <string name="alternativa05_01">Elvis Operator</string>
    <string name="alternativa05_02">Safe Navigation</string>
    <string name="alternativa05_03">Safe Verified</string>
    <string name="alternativa05_04">Check Operation</string>

    <!-- Resultado final (Textos)-->

    <!-- Positivo -->
    <string name="resultado_final_positivo_info01">Parabéns! Seu desempenho foi satisfatório! Você acertou: </string>
    <string name="resultado_final_positivo_info02">De 5 questões! :)</string>

    <!-- Negativo -->
    <string name="resultado_final_negativo_info01">Que pena! Seu resultado não foi satisfatório! Você acertou: </string>
    <string name="resultado_final_negativo_info02">De 5 questões! :(</string>
    <string name="title_activity_estudos">Aprendendo...</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>


</resources>
