<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quinto_questionario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.br.apptopicos.PrimeiroQuestionarioActivity">

    <TextView
        android:text="@string/questao05"
        android:layout_width="0dp"
        android:layout_height="111dp"
        android:id="@+id/textoQuestao05"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.85" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline21"
        app:layout_constraintGuide_begin="160dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="160dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline22"
        app:layout_constraintGuide_begin="40dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="40dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline23"
        app:layout_constraintGuide_begin="476dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="476dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline24"
        app:layout_constraintGuide_begin="158dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="158dp" />

    <RadioGroup
        android:layout_width="330dp"
        android:layout_height="245dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline21"
        android:weightSum="1"
        android:id="@+id/radioGroupQuestionarioId"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintVertical_bias="0.060000002">

        <RadioButton
            android:text="@string/alternativa05_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBtnOp01"
            android:textSize="20dp"/>

        <RadioButton
            android:text="@string/alternativa05_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBtnOp02"
            android:textSize="20dp"/>

        <RadioButton
            android:text="@string/alternativa05_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBtnOp03"
            android:textSize="20dp"/>

        <RadioButton
            android:text="@string/alternativa05_04"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:id="@+id/radioBtnOp04"
            android:textSize="20dp"/>
    </RadioGroup>

    <Button
        android:text="@string/lbl_responder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnResponder"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline23"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline25"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorBtnDefault" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline25"
        app:layout_constraintGuide_begin="233dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="233dp" />

</android.support.constraint.ConstraintLayout>
