<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quarto_questionario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.br.apptopicos.PrimeiroQuestionarioActivity">

    <TextView
        android:id="@+id/textoQuestao04"
        android:layout_width="319dp"
        android:layout_height="73dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/questao04"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="160dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="476dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="476dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="156dp"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="0dp" />

    <RadioGroup
        android:id="@+id/radioGroupQuestionarioId"
        android:layout_width="315dp"
        android:layout_height="243dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline21"
        app:layout_constraintVertical_bias="0.060000002">

        <RadioButton
            android:id="@+id/radioBtnOp01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alternativa04_01"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioBtnOp02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alternativa04_02"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioBtnOp03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alternativa04_03"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioBtnOp04"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:text="@string/alternativa04_04"
            android:textSize="20dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnResponder"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/colorBtnDefault"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:text="próximo"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="233dp"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="0dp" />

</android.support.constraint.ConstraintLayout>
