<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_boas_vindas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.br.apptopicos.BoasVindasActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="511dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="511dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="70dp"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="70dp"
        tools:layout_editor_absoluteX="290dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="240dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="240dp" />

    <Button
        android:id="@+id/btnEstudar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/colorBtnDefault"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:text="@string/estudar"
        android:textColor="#ffffff"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline18"
        app:layout_constraintRight_toLeftOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <Button
        android:id="@+id/btnPraticar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorBtnDefault"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:text="@string/praticar"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline18"
        app:layout_constraintRight_toLeftOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/btnEstudar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="213dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textoBoasVindas"
        app:layout_constraintBottom_toTopOf="@+id/btnEstudar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
